bluejay-validator/tests/snapshots/executable_integration_test__error@field_selection_merging.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/field_selection_merging.graphql
---
Error: Field `doesKnowCommand` missing argument(s): dogCommand
    ╭─[<unknown>:32:5]
    │
 32 │     doesKnowCommand
    │     ───────┬───────  
    │            ╰───────── Missing argument(s): dogCommand
────╯

Error: Field selections do not merge
   ╭─[<unknown>:2:7]
   │
 2 │ ╭─▶   dog {
   ┆ ┆   
 5 │ ├─▶   }
   │ │         
   │ ╰───────── Field selections do not merge
───╯

Error: Field selections do not merge
    ╭─[<unknown>:9:7]
    │
  9 │ ╭─▶   dog {
    ┆ ┆   
 12 │ ├─▶   }
    │ │         
    │ ╰───────── Field selections do not merge
────╯

Error: Field selections do not merge
    ╭─[<unknown>:16:7]
    │
 16 │ ╭─▶   dog {
    ┆ ┆   
 19 │ ├─▶   }
    │ │         
    │ ╰───────── Field selections do not merge
────╯

Error: Field selections do not merge
    ╭─[<unknown>:23:7]
    │
 23 │ ╭─▶   dog {
    ┆ ┆   
 26 │ ├─▶   }
    │ │         
    │ ╰───────── Field selections do not merge
────╯

Error: Field selections do not merge
    ╭─[<unknown>:30:7]
    │
 30 │ ╭─▶   dog {
    ┆ ┆   
 33 │ ├─▶   }
    │ │         
    │ ╰───────── Field selections do not merge
────╯

Error: Field selections do not merge
    ╭─[<unknown>:37:7]
    │
 37 │ ╭─▶   pet {
    ┆ ┆   
 44 │ ├─▶   }
    │ │         
    │ ╰───────── Field selections do not merge
────╯

